--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,164 @@
+/*useer icon css*/
+
+
+
+
+
+
+
+
+/* user menu */
+.header-avatar {
+	background-color: rgba(255, 255, 255, .6);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: 110%;
+	border: 1px solid rgba(255, 255, 255, 1);
+	border-radius: 50%;
+	box-shadow: 0px 0px 1px #ffffff;
+	color: #fff;
+	float: right;
+	font-size: 20px;
+/* 	opacity: .2; */
+	position: relative;
+	text-align: center;
+	height: 40px;
+	width: 40px;
+	z-index: 500;
+}
+@media (max-width: 425px) {
+	.header-avatar {
+		height: 30px;
+		width: 30px;
+		top: 4px;
+	}
+}
+.notification-bubble {
+	background-color: #F5A623;
+	background-color: rgba(245, 166, 35, .9);
+	border-radius: 50px;
+	color: #ffffff;
+	display: inline-block;
+	font-size: 18px;
+	height: 42px;
+	line-height: 2.3em;
+	overflow: hidden;
+	position: absolute;
+	text-indent: 8px;
+	width: 42px;
+}
+@media (max-width: 425px) {
+	.notification-bubble {
+		height: 30px;
+		width: 30px;
+	}
+}
+.header-avatar:hover {
+	cursor: pointer;
+}
+.header-avatar:hover > span.icon {
+	color: #ffffff;
+}
+.header-avatar > span.icon {
+	color: rgba(255, 255, 255, .8);
+	font-size: 26px;
+	position: relative;
+	left: 30px;
+	top: 5px;
+}
+@media (max-width: 425px) {
+	.header-avatar > span.icon {
+		font-size: 20px;
+		top: -2px;
+	}
+}
+/* header avatar menu */
+.avatar-menu {
+	float: right;
+	margin: 0px 20px 0px 20px;
+	position: relative;
+}
+.avatar-menu > a {
+	background-color: rgba(101, 170, 173, .9);
+	float: right;
+	padding: 10px 20px;
+	position: relative;
+}
+.avatar-menu > ul:before {
+	content: '';
+	width: 0; 
+	height: 0; 
+	display: inline-block;
+	border-left: 15px solid transparent;
+	border-right: 15px solid transparent;
+	border-bottom: 15px solid #fefefe;
+	position: absolute;
+	right: 4px;
+	top: -10px;
+	z-index: 99999;
+}
+.avatar-menu > ul {
+	background-color: #fefefe;
+	box-shadow: 0px 4px 5px 0px rgba(50, 50, 50, 0.5);
+	clear: both;
+	display: none;
+	position: absolute;
+	list-style-type: none;
+	mmargin-top: 20px 0px 0px 0px;
+	padding: 0px;
+	top: 40px;
+	right: 1px;
+	width: 200px;
+	z-index: 9999;
+}
+@media (max-width: 425px) {
+	.avatar-menu > ul {
+		top: 44px;
+		right: 27px;
+	}
+}
+.avatar-menu > ul > li {
+	
+}
+.avatar-menu > ul > li > a {
+	color: #555;
+	display: block;
+	font-size: 14px;
+	padding: 15px 20px;
+	transition: all 0.2s ease-in-out;
+}
+.avatar-menu > ul > li > a span.icon {
+	font-size: 16px;
+	margin-right: 10px;
+}
+.avatar-menu > ul > li > a span.icon-ellipsis-v {
+	margin-right: 2px;
+}
+.avatar-menu > ul > li > a:hover {
+	background-color: rgba(101, 170, 173, .1);
+	color: rgba(0, 0, 0, .9);
+	text-decoration: none;
+}
+.header-avatar > span.filled {
+	background-color: white;
+	border-radius: 20px;
+	color: black;
+	font-size: 16px;
+	line-height: 14px;
+	opacity: .75;
+	position: relative;
+	left: 20px;
+	width: 15px;
+	height: 15px;
+	text-align: center;
+}
+.header-avatar > span.overlayed {
+	font-size: 24px;
+	position: relative;
+	left: 20px;
+}
+
+
 
 /********** CSS **********/
 :root {
